Changes in redaction

--- a/water-consumption-manager.html
+++ b/water-consumption-manager.html
@@ -14,23 +14,82 @@
     />
 
     <!-- ================== FAVICON ========================== -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon//apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon//apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon//apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon//apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon//apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon//favicon-16x16.png">
-    <link rel="manifest" href="/assets/icon//manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/icon//ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/assets/icon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/assets/icon//apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/assets/icon//apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/assets/icon//apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/assets/icon//apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/assets/icon//apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/assets/icon//apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/icon//apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/icon//apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/icon//android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/icon//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/icon//favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/icon//favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/icon//manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/icon//ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <title>Water Consumption Manager</title>
   </head>
   <body>
@@ -96,9 +155,8 @@
       <section class="problem">
         <div class="text__problem1">
           <p>
-            “In Mexico the scarcity of water is worrying since according to NASA
-            the 80% of the country is in drought condition and has 33% of its
-            water reserves.”
+            “In Mexico the scarcity of water is worrisome, according to NASA the
+            80% of the country is in drought and has 33% of its water reserves.”
           </p>
         </div>
 
@@ -129,7 +187,7 @@
         <div class="text__problem3">
           <p>
             “In Jalisco, according to SIAPA data, water consumption per
-            inhabitant is in the 221 liters, while the WHO recommends 50 to 100
+            inhabitant is in 221 liters, while the WHO recommends 50 to 100
             liters.”
           </p>
         </div>
@@ -143,18 +201,19 @@
 
         <div class="acknowledgments__container">
           <h2>Acknowledgments</h2>
-          <p>ExpoCiencias Nacional Durango</p>
-          <p></p>
-          <p></p>
+          <p>ExpoCiencias Nacional Durango - Gold Medal</p>
+          <p>XXVI Concurso Estatal de Aparatos y Experimentos de Física - Gold Medal</p>
+          <p>Código Ciencia - Gold Medal</p>
+          <p>Infomatrix - Silver Medal</p>
         </div>
 
         <div class="solution__container">
           <h2>Solution</h2>
           <p>
             It is intended to solve the problem through a system responsible for
-            measuring water consumption within the home, sending this
-            information to a database hosted in the cloud to interpret the data
-            within an application and be displayed to the user.
+            measuring home water consumption, sending this information to a
+            cloud database to interpret the data within an application and be
+            displayed to the user.
           </p>
         </div>
 
@@ -168,10 +227,10 @@
             </p>
             <p>
               The prototype consisting of an electronic stage and a web
-              application were designed in a way that they are friendly to the
-              user because the sensor is installed where you want to measure the
-              consumption and the application presents an intuitive user
-              interface and clean.
+              application. <br />
+              The sensor is installed where you want to measure the consumption
+              and the application presents an intuitive and clean user
+              interface.
             </p>
           </div>
         </div>
@@ -201,7 +260,7 @@
           </div>
           <div class="application">
             <div class="application__img">
-              <img src="/assets/img/application.jpg" alt="" />
+              <img src="/assets/img/application.png" alt="" />
             </div>
             <div class="application__text">
               <h3>Application</h3>
