--- a/indoor-air-quality-control.html
+++ b/indoor-air-quality-control.html
@@ -14,31 +14,106 @@
     />
 
     <!-- ================== FAVICON ========================== -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icon//apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icon//apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icon//apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icon//apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icon//apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon//favicon-16x16.png">
-    <link rel="manifest" href="/assets/icon//manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/icon//ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/assets/icon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/assets/icon//apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/assets/icon//apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/assets/icon//apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/assets/icon//apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/assets/icon//apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/assets/icon//apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/icon//apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/icon//apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/assets/icon//android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/assets/icon//favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/assets/icon//favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/assets/icon//favicon-16x16.png"
+    />
+    <link rel="manifest" href="/assets/icon//manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/assets/icon//ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
     <title>Indoor Air Quality Control</title>
   </head>
   <body>
+    <!-- ================== START =========================== -->
+    <ul class="panels">
+      <li class="panel"></li>
+      <li class="panel"></li>
+      <li class="panel"></li>
+      <li class="panel"></li>
+      <li class="panel"></li>
+      <li class="panel"></li>
+    </ul>
+
     <div class="construction">
       <a href="index.html#work">
         <i class="uil uil-arrow-circle-left"></i>
       </a>
       <h1>Coming Soon</h1>
     </div>
+
+    <!--===== GSAP =====-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
+    <!--===== MAIN JS =====-->
+    <script src="/assets/js/generic.js"></script>
   </body>
 </html>
